@@ -8,9 +8,9 @@ import org.junit.Assert;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.context.embedded.LocalServerPort;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.context.SpringBootTest.WebEnvironment;
+import org.springframework.boot.test.web.server.LocalServerPort;
 import org.springframework.context.ConfigurableApplicationContext;
 import org.springframework.test.context.junit4.SpringRunner;
 
@@ -60,7 +60,7 @@ import jp.co.ricoh.cotos.commonlib.util.HeadersProperties;
  *
  */
 @RunWith(SpringRunner.class)
-@SpringBootTest(webEnvironment = WebEnvironment.RANDOM_PORT)
+@SpringBootTest(webEnvironment = WebEnvironment.RANDOM_PORT, properties = "test.context.id = TestEstimation")
 public class TestEstimation {
 
 	private static final String STR_256 = "0123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345";
@@ -155,7 +155,7 @@ public class TestEstimation {
 
 	@Test
 	public void CustomerEstimationのテスト() throws Exception {
-		CustomerEstimation entity = customerEstimationRepository.findOne(401L);
+		CustomerEstimation entity = customerEstimationRepository.findById(401L).get();
 		CustomerEstimation testTarget = new CustomerEstimation();
 		BeanUtils.copyProperties(testTarget, entity);
 
@@ -203,7 +203,7 @@ public class TestEstimation {
 
 	@Test
 	public void DealerEstimationのテスト() throws Exception {
-		DealerEstimation entity = dealerEstimationRepository.findOne(401L);
+		DealerEstimation entity = dealerEstimationRepository.findById(401L).get();
 		DealerEstimation testTarget = new DealerEstimation();
 
 		// 正常系
@@ -261,7 +261,7 @@ public class TestEstimation {
 
 	@Test
 	public void Estimationのテスト() throws Exception {
-		Estimation entity = estimationRepository.findOne(4L);
+		Estimation entity = estimationRepository.findById(4L).get();
 		Estimation testTarget = new Estimation();
 
 		// 正常系
@@ -355,7 +355,7 @@ public class TestEstimation {
 		Assert.assertTrue(testTool.errorMessageMatchesOne(result.getErrorInfoList(), "MoM企事部システム連携IDが設定されていません。"));
 
 		// 異常系（@Valid：見積添付ファイル）
-		entity = estimationRepository.findOne(4L);
+		entity = estimationRepository.findById(4L).get();
 		BeanUtils.copyProperties(testTarget, entity);
 		testTarget.getEstimationAttachedFileList().get(0).setFileName(null);
 		result = testSecurityController.callParameterCheck(testTarget, headersProperties, localServerPort);
@@ -364,7 +364,7 @@ public class TestEstimation {
 		Assert.assertTrue(testTool.errorMessageMatchesOne(result.getErrorInfoList(), "ファイル名が設定されていません。"));
 
 		// 異常系（@Valid：見積担当SA社員）
-		entity = estimationRepository.findOne(4L);
+		entity = estimationRepository.findById(4L).get();
 		BeanUtils.copyProperties(testTarget, entity);
 		testTarget.getEstimationPicSaEmp().setMomEmployeeId(null);
 		result = testSecurityController.callParameterCheck(testTarget, headersProperties, localServerPort);
@@ -373,7 +373,7 @@ public class TestEstimation {
 		Assert.assertTrue(testTool.errorMessageMatchesOne(result.getErrorInfoList(), "MoM社員IDが設定されていません。"));
 
 		// 異常系（@Valid ：見積明細）
-		entity = estimationRepository.findOne(4L);
+		entity = estimationRepository.findById(4L).get();
 		BeanUtils.copyProperties(testTarget, entity);
 		testTarget.getEstimationDetailList().get(0).setState(null);
 		result = testSecurityController.callParameterCheck(testTarget, headersProperties, localServerPort);
@@ -382,7 +382,7 @@ public class TestEstimation {
 		Assert.assertTrue(testTool.errorMessageMatchesOne(result.getErrorInfoList(), "状態が設定されていません。"));
 
 		// 異常系（@Valid ：販売店（見積用））
-		entity = estimationRepository.findOne(4L);
+		entity = estimationRepository.findById(4L).get();
 		BeanUtils.copyProperties(testTarget, entity);
 		testTarget.getDealerEstimationList().get(0).setPicMailAddress(STR_256);
 		result = testSecurityController.callParameterCheck(testTarget, headersProperties, localServerPort);
@@ -391,7 +391,7 @@ public class TestEstimation {
 		Assert.assertTrue(testTool.errorMessageMatchesOne(result.getErrorInfoList(), "MoM非連携_担当者メールアドレスは最大文字数（255）を超えています。"));
 
 		// 異常系（@Valid ：見積追加編集者社員）
-		entity = estimationRepository.findOne(4L);
+		entity = estimationRepository.findById(4L).get();
 		BeanUtils.copyProperties(testTarget, entity);
 		testTarget.getEstimationAddedEditorEmpList().get(0).setMomEmployeeId(null);
 		result = testSecurityController.callParameterCheck(testTarget, headersProperties, localServerPort);
@@ -400,7 +400,7 @@ public class TestEstimation {
 		Assert.assertTrue(testTool.errorMessageMatchesOne(result.getErrorInfoList(), "MoM社員IDが設定されていません。"));
 
 		// 異常系（@Valid ：電子契約情報）
-		entity = estimationRepository.findOne(4L);
+		entity = estimationRepository.findById(4L).get();
 		BeanUtils.copyProperties(testTarget, entity);
 		testTarget.getElectronicContractInfo().setImfrSdInsertId(STR_256);
 		result = testSecurityController.callParameterCheck(testTarget, headersProperties, localServerPort);
@@ -412,7 +412,7 @@ public class TestEstimation {
 
 	@Test
 	public void EstimationAddedEditorEmpのテスト() throws Exception {
-		EstimationAddedEditorEmp entity = estimationAddedEditorEmpRepository.findOne(401L);
+		EstimationAddedEditorEmp entity = estimationAddedEditorEmpRepository.findById(401L).get();
 		EstimationAddedEditorEmp testTarget = new EstimationAddedEditorEmp();
 		BeanUtils.copyProperties(testTarget, entity);
 
@@ -440,7 +440,7 @@ public class TestEstimation {
 
 	@Test
 	public void EstimationApprovalResultのテスト() throws Exception {
-		EstimationApprovalResult entity = estimationApprovalResultRepository.findOne(401L);
+		EstimationApprovalResult entity = estimationApprovalResultRepository.findById(401L).get();
 		EstimationApprovalResult testTarget = new EstimationApprovalResult();
 		BeanUtils.copyProperties(testTarget, entity);
 
@@ -473,7 +473,7 @@ public class TestEstimation {
 
 	@Test
 	public void EstimationApprovalRouteのテスト() throws Exception {
-		EstimationApprovalRoute entity = estimationApprovalRouteRepository.findOne(401L);
+		EstimationApprovalRoute entity = estimationApprovalRouteRepository.findById(401L).get();
 		EstimationApprovalRoute testTarget = new EstimationApprovalRoute();
 
 		// 正常系
@@ -511,7 +511,7 @@ public class TestEstimation {
 
 	@Test
 	public void EstimationApprovalRouteNodeのテスト() throws Exception {
-		EstimationApprovalRouteNode entity = estimationApprovalRouteNodeRepository.findOne(401L);
+		EstimationApprovalRouteNode entity = estimationApprovalRouteNodeRepository.findById(401L).get();
 		EstimationApprovalRouteNode testTarget = new EstimationApprovalRouteNode();
 
 		// 正常系
@@ -564,7 +564,7 @@ public class TestEstimation {
 	@Test
 	public void EstimationAttachedFileのテスト() throws Exception {
 
-		EstimationAttachedFile entity = estimationAttachedFileRepository.findOne(401L);
+		EstimationAttachedFile entity = estimationAttachedFileRepository.findById(401L).get();
 		EstimationAttachedFile testTarget = new EstimationAttachedFile();
 		BeanUtils.copyProperties(testTarget, entity);
 
@@ -591,7 +591,7 @@ public class TestEstimation {
 		Assert.assertTrue(testTool.errorMessageMatchesOne(result.getErrorInfoList(), "コメントは最大文字数（1000）を超えています。"));
 
 		// 異常系（@Valid ：添付ファイル）
-		entity = estimationAttachedFileRepository.findOne(401L);
+		entity = estimationAttachedFileRepository.findById(401L).get();
 		BeanUtils.copyProperties(testTarget, entity);
 		testTarget.getAttachedFile().setFilePhysicsName(null);
 		result = testSecurityController.callParameterCheck(testTarget, headersProperties, localServerPort);
@@ -603,7 +603,7 @@ public class TestEstimation {
 
 	@Test
 	public void EstimationCheckResultのテスト() throws Exception {
-		EstimationCheckResult entity = estimationCheckResultRepository.findOne(401L);
+		EstimationCheckResult entity = estimationCheckResultRepository.findById(401L).get();
 		EstimationCheckResult testTarget = new EstimationCheckResult();
 
 		// 正常系
@@ -655,7 +655,7 @@ public class TestEstimation {
 
 	@Test
 	public void EstimationDetailのテスト() throws Exception {
-		EstimationDetail entity = estimationDetailRepository.findOne(401L);
+		EstimationDetail entity = estimationDetailRepository.findById(401L).get();
 		EstimationDetail testTarget = new EstimationDetail();
 		BeanUtils.copyProperties(testTarget, entity);
 
@@ -714,7 +714,7 @@ public class TestEstimation {
 
 	@Test
 	public void EstimationPicSaEmpのテスト() throws Exception {
-		EstimationPicSaEmp entity = estimationPicSaEmpRepository.findOne(401L);
+		EstimationPicSaEmp entity = estimationPicSaEmpRepository.findById(401L).get();
 		EstimationPicSaEmp testTarget = new EstimationPicSaEmp();
 
 		// 正常系
@@ -757,7 +757,7 @@ public class TestEstimation {
 
 	@Test
 	public void ItemEstimationのテスト() throws Exception {
-		ItemEstimation entity = itemEstimationRepository.findOne(401L);
+		ItemEstimation entity = itemEstimationRepository.findById(401L).get();
 		ItemEstimation testTarget = new ItemEstimation();
 
 		// 正常系
@@ -806,7 +806,7 @@ public class TestEstimation {
 
 	@Test
 	public void OperationLogのテスト() throws Exception {
-		OperationLog entity = operationLogRepository.findOne(401L);
+		OperationLog entity = operationLogRepository.findById(401L).get();
 		OperationLog testTarget = new OperationLog();
 
 		// 正常系
@@ -835,7 +835,7 @@ public class TestEstimation {
 
 	@Test
 	public void ProductEstimationのテスト() throws Exception {
-		ProductEstimation entity = productEstimationRepository.findOne(401L);
+		ProductEstimation entity = productEstimationRepository.findById(401L).get();
 		ProductEstimation testTarget = new ProductEstimation();
 
 		// 正常系
@@ -863,7 +863,7 @@ public class TestEstimation {
 		// 異常系（@Size(max) ：）
 		BeanUtils.copyProperties(testTarget, entity);
 		testTarget.setProductMasterId(INT_MINUS_1);
-		testTarget.setRepItemMasterId(new Long(INT_MINUS_1));
+		testTarget.setRepItemMasterId(Long.valueOf(INT_MINUS_1));
 		result = testSecurityController.callParameterCheck(testTarget, headersProperties, localServerPort);
 		Assert.assertTrue(result.getErrorInfoList().size() == 2);
 		Assert.assertTrue(testTool.errorIdMatchesAll(result.getErrorInfoList(), ParameterErrorIds.ROT00027));
@@ -872,7 +872,7 @@ public class TestEstimation {
 
 	@Test
 	public void PenaltyDetailEstimationのテスト() throws Exception {
-		PenaltyDetailEstimation entity = penaltyDetailEstimationRepository.findOne(1L);
+		PenaltyDetailEstimation entity = penaltyDetailEstimationRepository.findById(1L).get();
 		PenaltyDetailEstimation testTarget = new PenaltyDetailEstimation();
 
 		// 正常系
@@ -919,7 +919,7 @@ public class TestEstimation {
 
 	@Test
 	public void ElectronicContractInfoのテスト() throws Exception {
-		ElectronicContractInfo entity = electronicContractInfoRepository.findOne(401L);
+		ElectronicContractInfo entity = electronicContractInfoRepository.findById(401L).get();
 		ElectronicContractInfo testTarget = new ElectronicContractInfo();
 		BeanUtils.copyProperties(testTarget, entity);
 
